--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularFormulario</title>
+  <title>AngularForms</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <anfo-root></anfo-root>
-  <anfo-form></anfo-form>
+  <app-root></app-root>
 </body>
 </html>
